--- a/plantclassifier.ipynb
+++ b/plantclassifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMVMQigFUpCGcgxhQJIOQJS",
+      "authorship_tag": "ABX9TyNfQWDDbYbn3wqcbQEkjjyV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,16 +238,10 @@
         }
       ],
       "source": [
-        "# =========================================================\n",
-        "# 1️⃣ INSTALL DEPENDENCIES\n",
-        "# =========================================================\n",
-        "# Uncomment if not already installed\n",
+        "# INSTALL DEPENDENCIES\n",
         "!pip install kaggle kagglehub torch torchvision torchaudio albumentations opencv-python scikit-learn matplotlib seaborn gradio\n",
         "\n",
-        "\n",
-        "# =========================================================\n",
-        "# 2️⃣ IMPORTS\n",
-        "# =========================================================\n",
+        "# IMPORTS\n",
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
         "from torchvision import datasets, transforms, models\n",
@@ -264,17 +258,13 @@
         "import os\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 3️⃣ DOWNLOAD DATASET\n",
-        "# =========================================================\n",
-        "import kagglehub\n",
+        "\n",
+        "#  DOWNLOAD DATASET\n",
         "dataset_path = kagglehub.dataset_download(\"vipoooool/new-plant-diseases-dataset\")\n",
         "print(\"Dataset cached at:\", dataset_path)\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 4️⃣ EXPLORE AND FIND CORRECT PATHS\n",
-        "# =========================================================\n",
+        "# EXPLORE AND FIND CORRECT PATHS\n",
         "def explore_directory(path, max_depth=3, current_depth=0):\n",
         "    \"\"\"Recursively explore directory structure\"\"\"\n",
         "    path = Path(path)\n",
@@ -289,13 +279,11 @@
         "    except PermissionError:\n",
         "        print(\"  \" * current_depth + \"[Permission Denied]\")\n",
         "\n",
-        "print(\"\\n📂 Exploring dataset structure:\")\n",
+        "print(\"\\n Exploring dataset structure:\")\n",
         "explore_directory(dataset_path, max_depth=3)\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 5️⃣ FIND ACTUAL TRAIN DIRECTORY\n",
-        "# =========================================================\n",
+        "# FIND ACTUAL TRAIN DIRECTORY\n",
         "def find_train_dir(base_path):\n",
         "    \"\"\"Find the actual train directory in the dataset\"\"\"\n",
         "    base_path = Path(base_path)\n",
@@ -315,7 +303,7 @@
         "    # Return the first existing path\n",
         "    for path in possible_paths:\n",
         "        if path.exists() and path.is_dir():\n",
-        "            print(f\"✅ Found train directory: {path}\")\n",
+        "            print(f\"Found train directory: {path}\")\n",
         "            return path\n",
         "\n",
         "    return None\n",
@@ -326,9 +314,7 @@
         "    raise FileNotFoundError(f\"Could not find train directory in {dataset_path}\")\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 6️⃣ CREATE TRAIN/VAL/TEST SPLITS\n",
-        "# =========================================================\n",
+        "#  CREATE TRAIN/VAL/TEST SPLITS\n",
         "# Destination folders (writable)\n",
         "base_dir = Path(\"/content/plantvillage\")\n",
         "train_dir = base_dir / \"train\"\n",
@@ -350,7 +336,7 @@
         "    images = list(cls_folder.glob(\"*.jpg\")) + list(cls_folder.glob(\"*.jpeg\")) + list(cls_folder.glob(\"*.png\")) + list(cls_folder.glob(\"*.JPG\"))\n",
         "\n",
         "    if len(images) < 2:\n",
-        "        print(f\"⚠️ Skipping class {cls_folder.name} (only {len(images)} image(s))\")\n",
+        "        print(f\"Skipping class {cls_folder.name} (only {len(images)} image(s))\")\n",
         "        continue\n",
         "\n",
         "    print(f\"Processing {cls_folder.name}: {len(images)} images\")\n",
@@ -369,16 +355,13 @@
         "        (test_dir / cls_folder.name).mkdir(parents=True, exist_ok=True)\n",
         "        shutil.copy(img, test_dir / cls_folder.name / img.name)\n",
         "\n",
-        "print(\"✅ Dataset split complete!\")\n"
+        "print(\"Dataset split complete!\")\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# =========================================================\n",
-        "# 7️⃣ CREATE DATA LOADERS\n",
-        "# =========================================================\n",
+        "# CREATE DATA LOADERS\n",
         "input_size = 224\n",
         "\n",
         "train_transform = transforms.Compose([\n",
@@ -404,22 +387,18 @@
         "val_loader   = DataLoader(val_ds, batch_size=32, shuffle=False, num_workers=2)\n",
         "test_loader  = DataLoader(test_ds, batch_size=32, shuffle=False, num_workers=2)\n",
         "\n",
-        "print(f\"\\n📋 Number of classes: {len(train_ds.classes)}\")\n",
+        "print(f\"\\n Number of classes: {len(train_ds.classes)}\")\n",
         "print(f\"Train samples: {len(train_ds)}\")\n",
         "print(f\"Val samples: {len(val_ds)}\")\n",
         "print(f\"Test samples: {len(test_ds)}\")\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 8️⃣ SET DEVICE (GPU if available)\n",
-        "# =========================================================\n",
+        "# SET DEVICE (GPU if available)\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(f\"\\n🖥️ Using device: {device}\")\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 9️⃣ CREATE MOBILENETV2 MODEL\n",
-        "# =========================================================\n",
+        "# CREATE MOBILENETV2 MODEL\n",
         "num_classes = len(train_ds.classes)\n",
         "\n",
         "model = models.mobilenet_v2(weights=\"DEFAULT\")\n",
@@ -433,21 +412,15 @@
         "model.classifier[1] = nn.Linear(in_features, num_classes)\n",
         "\n",
         "model = model.to(device)\n",
-        "print(f\"✅ Model created with {num_classes} output classes\")\n",
+        "print(f\" Model created with {num_classes} output classes\")\n",
         "\n",
-        "\n",
-        "# =========================================================\n",
-        "# 🔟 LOSS, OPTIMIZER, LR SCHEDULER\n",
-        "# =========================================================\n",
+        "#  LOSS, OPTIMIZER, LR SCHEDULER\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n",
         "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience=2, factor=0.1)\n",
         "\n",
         "\n",
-        "\n",
-        "# =========================================================\n",
-        "# 1️⃣1️⃣ TRAINING LOOP\n",
-        "# =========================================================\n",
+        "# TRAINING LOOP\n",
         "import time\n",
         "\n",
         "def train_model(epochs=10):\n",
@@ -511,14 +484,12 @@
         "\n",
         "    return history\n",
         "\n",
-        "print(\"\\n🚀 Starting training...\")\n",
+        "print(\"\\n Starting training...\")\n",
         "history = train_model(epochs=10)\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 1️⃣2️⃣ EVALUATION\n",
-        "# =========================================================\n",
-        "print(\"\\n📊 Evaluating on test set...\")\n",
+        "#  EVALUATION\n",
+        "print(\"\\n Evaluating on test set...\")\n",
         "model.load_state_dict(torch.load(\"mobilenetv2_plant.pth\"))\n",
         "model.eval()\n",
         "\n",
@@ -541,9 +512,7 @@
         "print(classification_report(all_labels, all_preds, target_names=train_ds.classes))\n",
         "\n",
         "\n",
-        "# =========================================================\n",
-        "# 1️⃣3️⃣ CONFUSION MATRIX\n",
-        "# =========================================================\n",
+        "#  CONFUSION MATRIX\n",
         "cm = confusion_matrix(all_labels, all_preds)\n",
         "plt.figure(figsize=(12,10))\n",
         "sns.heatmap(cm, annot=False, cmap=\"Blues\")\n",
@@ -551,35 +520,7 @@
         "plt.xlabel(\"Predicted\")\n",
         "plt.ylabel(\"True\")\n",
         "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# =========================================================\n",
-        "# 1️⃣4️⃣ GRADIO DEMO\n",
-        "# =========================================================\n",
-        "#def predict(img):\n",
-        " #   \"\"\"Predict plant disease from image\"\"\"\n",
-        "  #  model.eval()\n",
-        "   # x = test_transform(img).unsqueeze(0).to(device)\n",
-        "    #with torch.no_grad():\n",
-        "     #   out = model(x)\n",
-        "      #  probs = torch.nn.functional.softmax(out, dim=1)\n",
-        "       # _, pred = torch.max(out, 1)\n",
-        "\n",
-        "   # predicted_class = train_ds.classes[pred.item()]\n",
-        "    #confidence = probs[0][pred.item()].item()\n",
-        "\n",
-        "    #return f\"{predicted_class} (Confidence: {confidence:.2%})\"\n",
-        "\n",
-        "#demo = gr.Interface(\n",
-        " #   fn=predict,\n",
-        "  #  inputs=gr.Image(type=\"pil\"),\n",
-        "   # outputs=\"text\",\n",
-        "    #title=\"🌿 Plant Disease Classifier\",\n",
-        "    #description=\"Upload an image of a plant leaf to identify diseases\"\n",
-        "#)\n",
-        "\n",
-        "#demo.launch()"
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
@@ -706,9 +647,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# =========================================================\n",
-        "# 1️⃣4️⃣ GRADIO DEMO\n",
-        "# =========================================================\n",
+        "# GRADIO DEMO\n",
         "def predict(img):\n",
         "    \"\"\"Predict plant disease from image\"\"\"\n",
         "    model.eval()\n",
@@ -727,7 +666,7 @@
         "    fn=predict,\n",
         "    inputs=gr.Image(type=\"pil\"),\n",
         "    outputs=\"text\",\n",
-        "    title=\"🌿 Plant Disease Classifier\",\n",
+        "    title=\" Plant Disease Classifier\",\n",
         "    description=\"Upload an image of a plant leaf to identify diseases\"\n",
         ")\n",
         "\n",
